# example-python-package

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .pypirc.example  LICENSE  README.md  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/actions/job-setup/: action.yml
.github/workflows/: format.yml  lint.yml  test.yml  vulnerability-scan.yml
.sh/: build.sh  create_venv.sh  test.sh
.sh/pytest/: server.sh
.sh/sonarqube/: scan.sh  server.sh
example_python_package/: __init__.py
example_python_package/factories/: generic_factory.py
example_python_package/utils/: __init__.py  multiplier.py
factories/: __init__.py
tests/factories/: test_generic_factory.py
tests/factories/data/: __init__.py  generic_factory_data.py
tests/stubs/: stub_class.py
tests/utils/: test_multiplier.py
