[build-system]
requires = ["setuptools >= 42", "wheel", "build"]

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
exclude = "tests"

# import/export
ignore_missing_imports = true
implicit_reexport = true

# disallow untyped definitions and calls
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

# configuring warnings
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_redundant_casts = true

# config file
warn_unused_configs = true

# misc
strict_equality = true

[tool.pytest.ini_options]
junit_family = "xunit1"
filterwarnings = ["ignore::DeprecationWarning"]
addopts = "-ra -vv --cov=example_python_package --cov-report xml:reports/pytest/coverage.xml --junitxml=reports/pytest/nosetests.xml --cov-report html:reports/pytest/html --cov-fail-under=100"
testpaths = ["tests/"]
