[metadata]
name = example_python_package
version = 1.0.0
author = TBC
author_email = TBC
description = Example package description
long_description = file: README.md

[options]
packages = find:
# pytypes doesn't work with Python >= 3.10 - would be interesting to see what alternatives there are
python_requires= >=3.8, <3.10
install_requires =
    typeguard == 4.2.1
    pytypes == 1.0b10

[options.extras_require]
dev =
    pre-commit == 2.21.0
    twine == 4.0.2
format =
    black == 22.12.0
    isort == 5.12.0
test =
    bandit == 1.7.5
    mypy == 1.9.0
    pylint == 2.17.7
    pylint-print == 1.0.1
    pytest == 7.4.2
    pytest-cov == 3.0.0
    pytest-mock == 3.14.0
    pytest-xdist == 3.3.1

[options.packages.find]
exclude =
    tests*

[egg_info]
egg_base = ./
